# jetbot-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  motor.rs  robot.rs
static/: index.html
