[package]
name = "jetbot-rust"
version = "0.1.0"
authors = ["Mischa <mischa-robots@gmail.com>"]
homepage = "https://mischa-robots.github.io/"
repository = "https://github.com/mischa-robots/jetbot-rust"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
pwm-pca9685 = "1.0.0"
linux-embedded-hal = "0.4"
lazy_static = "1.4"
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["full"] }

[profile.dev]
incremental = true